dataset1235/2025-2/805158916/users/566502422/executions/2651470117_1626817775.log
== RUN (2025-08-25 15:11:53)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r = float(input("digite o valor do raio"))
import math
print(math.pi(r**2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(math.pi(r**2))
          ^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(math.pi(r**2))
          ^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(math.pi(r**2))
          ^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(math.pi(r**2))
          ^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(math.pi(r**2))
          ^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(math.pi(r**2))
          ^^^^^^^^^^^^^
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:20:29)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r = float(input("digite o valor do raio"))
import math
print(round(math.pi*(r**2),3))
print(round(4/3math.pi*(r**3),3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 7
    print(round(4/3math.pi*(r**3),3))
                  ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 7
    print(round(4/3math.pi*(r**3),3))
                  ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 7
    print(round(4/3math.pi*(r**3),3))
                  ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 7
    print(round(4/3math.pi*(r**3),3))
                  ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 7
    print(round(4/3math.pi*(r**3),3))
                  ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 7
    print(round(4/3math.pi*(r**3),3))
                  ^
SyntaxError: invalid decimal literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 15:20:50)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r = float(input("digite o valor do raio"))
import math
print(round(math.pi*(r**2),3))
print(round(4/3*math.pi*(r**3),3))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:18:09)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r = (input("digite o valor do raio"))
import math
print(round(math.pi(r ** 2),3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(math.pi(r ** 2),3))
                        ~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(math.pi(r ** 2),3))
                        ~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(math.pi(r ** 2),3))
                        ~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(math.pi(r ** 2),3))
                        ~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(math.pi(r ** 2),3))
                        ~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(math.pi(r ** 2),3))
                        ~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:16:44)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r = (input("digite o valor do raio"))
from math import pi
print(round(pi(r**2),3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(pi(r**2),3))
                   ~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(pi(r**2),3))
                   ~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(pi(r**2),3))
                   ~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(pi(r**2),3))
                   ~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(pi(r**2),3))
                   ~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(pi(r**2),3))
                   ~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:18:37)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r = float(input("digite o valor do raio"))
import math
print(round(math.pi(r**2),3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(math.pi(r**2),3))
                ^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(math.pi(r**2),3))
                ^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(math.pi(r**2),3))
                ^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(math.pi(r**2),3))
                ^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(math.pi(r**2),3))
                ^^^^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(math.pi(r**2),3))
                ^^^^^^^^^^^^^
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:15:41)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r = float(input("digite o valor do raio"))
from math import pi
print(pi(r**2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(pi(r**2))
          ^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(pi(r**2))
          ^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(pi(r**2))
          ^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(pi(r**2))
          ^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(pi(r**2))
          ^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(pi(r**2))
          ^^^^^^^^
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:19:18)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r = float(input("digite o valor do raio"))
import math
print(round(math.pi*(r**2),3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
digite o valor do raio0.031
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
digite o valor do raio63.617
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
digite o valor do raio478.388
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
digite o valor do raio380.133
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
digite o valor do raio14246.104
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
digite o valor do raio12.566
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:16:59)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r = (input("digite o valor do raio"))
from math import pi
print(round(pi(r **2 ),3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(pi(r **2 ),3))
                   ~~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(pi(r **2 ),3))
                   ~~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(pi(r **2 ),3))
                   ~~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(pi(r **2 ),3))
                   ~~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(pi(r **2 ),3))
                   ~~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(pi(r **2 ),3))
                   ~~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:20:39)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r = float(input("digite o valor do raio"))
import math
print(round(math.pi*(r**2),3))
print(round(4/3*math.pi*(r**3),3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:10:26)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r = float(input("digite o valor do raio"))
print(math.pi*r**2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(math.pi*r**2)
          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(math.pi*r**2)
          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(math.pi*r**2)
          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(math.pi*r**2)
          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(math.pi*r**2)
          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(math.pi*r**2)
          ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:16:32)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r = float(input("digite o valor do raio"))
from math import pi
print(round(pi(r**2),3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(pi(r**2),3))
                ^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(pi(r**2),3))
                ^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(pi(r**2),3))
                ^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(pi(r**2),3))
                ^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(pi(r**2),3))
                ^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(pi(r**2),3))
                ^^^^^^^^
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:18:24)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r = (input("digite o valor do raio"))
import math
print(round(math.pi(r**2),3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(math.pi(r**2),3))
                        ~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(math.pi(r**2),3))
                        ~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(math.pi(r**2),3))
                        ~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(math.pi(r**2),3))
                        ~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(math.pi(r**2),3))
                        ~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(math.pi(r**2),3))
                        ~^^~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:15:23)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r = float(input("digite o valor do raio"))
from math import pi
print(math.pi(r**2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(math.pi(r**2))
          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(math.pi(r**2))
          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(math.pi(r**2))
          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(math.pi(r**2))
          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(math.pi(r**2))
          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(math.pi(r**2))
          ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 15:10:54)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r = float(input("digite o valor do raio"))
print(math.pi(r**2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(math.pi(r**2))
          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(math.pi(r**2))
          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(math.pi(r**2))
          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(math.pi(r**2))
          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(math.pi(r**2))
          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(math.pi(r**2))
          ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
